--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django-allauth>=65.4.1",
     "django-cors-headers>=4.7.0",
     "django-filter>=25.1",
+    "django-ipware>=7.0.1",
     "django-jazzmin>=3.0.1",
     "django-split-settings>=1.3.2",
     "djangorestframework>=3.15.2",
@@ -16,6 +17,7 @@ dependencies = [
     "pillow>=11.1.0",
     "pyjwt>=2.9.0",
     "python-dotenv>=1.0.1",
+    "pyyaml>=6.0.2",
     "requests>=2.32.3",
 ]
 
