--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pyyaml>=6.0.2",
     "requests>=2.32.3",
+    "whitenoise>=6.9.0",
 ]
 
 [dependency-groups]
@@ -27,4 +28,5 @@ dev = [
     "django-debug-toolbar>=5.0.1",
     "icecream>=2.1.4",
     "pytest>=8.3.5",
+    "ruff>=0.11.10",
 ]
